# jvm

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  error.txt  ffox-profile.sh  index.html  run-jvm.sh  tailwind.config.js
c/: main  main.c
c/argsparser/: argsparser.c  argsparser.h
c/attributes/: annotations.h  elementvalue.h
c/flags/: class.h  field.h  method.h
c/jvm/: settings.h
c/lib/vec/: vec.h
classes/: basic.java  helloworld.java
classlibs/: Main.java  copy.sh  update17.sh
classlibs/17/java.base/java/util/: currency.data
classlibs/17/java.rmi/sun/rmi/server/resources/: rmid.properties  rmid_de.properties  rmid_es.properties  rmid_fr.properties  rmid_it.properties  rmid_ja.properties  rmid_ko.properties  rmid_pt_BR.properties  rmid_sv.properties  rmid_zh_CN.properties  rmid_zh_TW.properties
classlibs/17/java.sql.rowset/com/sun/rowset/: RowSetResourceBundle_fr.properties  RowSetResourceBundle_it.properties  RowSetResourceBundle_ko.properties  RowSetResourceBundle_pt_BR.properties  RowSetResourceBundle_zh_TW.properties
classlibs/17/modules/java.sql.rowset/com/sun/rowset/: RowSetResourceBundle_de.properties  (+4 more)
classlibs/17/modules/jdk.hotspot.agent/: sa.properties
src/: access_macros.rs  argsparser.rs  attributes.rs  class.rs  constant_pool.rs  data_access.rs  errorcodes.rs  flags.rs  frame.rs  jvm.rs  lib.rs  llvm.rs  main.rs  multitypebox.rs  reference.rs  safebox.rs  testing.rs  thread.rs  value.rs
src/attributes/: annotations.rs  code.rs  module.rs
src/class/: classfile.rs  customclass.rs  natives.rs  system.rs
src/class/natives/: double.rs  math.rs  strict_math.rs  system.rs
src/jvm/: instructions.rs  operations.rs  settings.rs
src/jvm/instructions/: comparisons.rs  constants.rs  control.rs  conversions.rs  extended.rs  loads.rs  math.rs  references.rs  reserved.rs  stack.rs  stores.rs
src/llvm/: valuemarker.rs
src/reference/: array.rs  object.rs  packedboolarray.rs
src/reference/object/: customobject.rs  natives.rs
src/reference/object/natives/: integer.rs  print_stream.rs  printstream.rs  string.rs  string_builder.rs
(+39 files in other folders)
