[package]
name = "rust-jvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
#debug = true

[profile.bench]
debug = true

[dependencies]
paste = "1.0.9"
dyn-clone = "1.0.9"
send_wrapper = "0.6.0"
once_cell = "1.16.0"
colored = "2.0.0"
yew = { version = "0.20.0", features = ["csr"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }